--- a/HEALTH_INSURANCE_CROSS_SELL_PREDICTION.ipynb
+++ b/HEALTH_INSURANCE_CROSS_SELL_PREDICTION.ipynb
@@ -1959,11 +1959,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fM-KbA6s8eAQ",
-        "outputId": "00827630-6d1d-446d-a4cb-9b071538863b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fM-KbA6s8eAQ",
+        "outputId": "00827630-6d1d-446d-a4cb-9b071538863b"
       },
       "source": [
         "print(classification_report(y_pred,ytest))"
@@ -1990,12 +1990,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KMeupOZBxWRf",
-        "outputId": "0f373e57-d2fa-4793-a56f-a6293a701584",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 301
-        }
+        },
+        "id": "KMeupOZBxWRf",
+        "outputId": "0f373e57-d2fa-4793-a56f-a6293a701584"
       },
       "source": [
         "from sklearn.metrics import roc_curve\n",
@@ -2026,12 +2026,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RqiTYMvFxaw3",
-        "outputId": "93b9d0c8-b22b-493a-ab33-60de6ccad652",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
-        }
+        },
+        "id": "RqiTYMvFxaw3",
+        "outputId": "93b9d0c8-b22b-493a-ab33-60de6ccad652"
       },
       "source": [
         "cm=confusion_matrix(y_pred,ytest)\n",
@@ -2082,11 +2082,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EgWIxOLmxloq",
-        "outputId": "6c5d4d3f-5dcd-4957-b54e-221d1d86c3d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EgWIxOLmxloq",
+        "outputId": "6c5d4d3f-5dcd-4957-b54e-221d1d86c3d4"
       },
       "source": [
         "from xgboost import XGBClassifier\n",
@@ -2121,11 +2121,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K_uzBC7MxtTT",
-        "outputId": "e142b033-4c05-41eb-a5fb-6f5fd2890b2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K_uzBC7MxtTT",
+        "outputId": "e142b033-4c05-41eb-a5fb-6f5fd2890b2e"
       },
       "source": [
         "print(classification_report(y_predict,ytest))"
@@ -2152,12 +2152,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2_zWb6Z3xyg7",
-        "outputId": "b822fd6f-345d-45e9-fa04-47f40bf1a31a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 301
-        }
+        },
+        "id": "2_zWb6Z3xyg7",
+        "outputId": "b822fd6f-345d-45e9-fa04-47f40bf1a31a"
       },
       "source": [
         "from sklearn.metrics import roc_curve\n",
@@ -2188,12 +2188,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FNocC8sex5OV",
-        "outputId": "fc78dd41-e655-4025-f670-930ca0d4589d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 321
-        }
+        },
+        "id": "FNocC8sex5OV",
+        "outputId": "fc78dd41-e655-4025-f670-930ca0d4589d"
       },
       "source": [
         "#it helps to identify how many values are classified correctly\n",
@@ -2231,6 +2231,145 @@
           },
           "metadata": {}
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bMu-6Vl7yYB-"
+      },
+      "source": [
+        "# **Comparing the model**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kLEBZCcKydui",
+        "outputId": "fbb9d9f9-91fb-443b-ecdb-ed6c8cb01f66",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "source": [
+        "ind=['Logistic regression','Randomforest','XGBClassifier']\n",
+        "data={\"Accuracy\":[acc_lr,acc_rf,acc_xgb],\"Recall\":[recall_lr,recall_rf,recall_xgb],\"Precision\":[precision_lr,precision_rf,precision_xgb],\n",
+        "    'f1_score':[f1score_lr,f1score_rf,f1score_xgb],\"ROC_AUC\":[AUC_LR,AUC_RF,AUC_xgb]}\n",
+        "result=pd.DataFrame(data=data,index=ind)\n",
+        "result"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Accuracy</th>\n",
+              "      <th>Recall</th>\n",
+              "      <th>Precision</th>\n",
+              "      <th>f1_score</th>\n",
+              "      <th>ROC_AUC</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Logistic regression</th>\n",
+              "      <td>0.783468</td>\n",
+              "      <td>0.976962</td>\n",
+              "      <td>0.704359</td>\n",
+              "      <td>0.818561</td>\n",
+              "      <td>0.833392</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Randomforest</th>\n",
+              "      <td>0.944413</td>\n",
+              "      <td>0.997039</td>\n",
+              "      <td>0.902084</td>\n",
+              "      <td>0.947188</td>\n",
+              "      <td>0.949388</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>XGBClassifier</th>\n",
+              "      <td>0.797393</td>\n",
+              "      <td>0.929799</td>\n",
+              "      <td>0.735110</td>\n",
+              "      <td>0.821071</td>\n",
+              "      <td>0.819820</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                     Accuracy    Recall  Precision  f1_score   ROC_AUC\n",
+              "Logistic regression  0.783468  0.976962   0.704359  0.818561  0.833392\n",
+              "Randomforest         0.944413  0.997039   0.902084  0.947188  0.949388\n",
+              "XGBClassifier        0.797393  0.929799   0.735110  0.821071  0.819820"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6ZGr34Z0yjwD"
+      },
+      "source": [
+        "### The ML model for the problem statement was created using python with the help of the dataset, and the ML model created with Random Forest and XGBClassifier models performed better than Logistics Regression model. Thus, for the given problem, the models created by Random Forest and XGBClassifier."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ITswTsATyp9g"
+      },
+      "source": [
+        "# **Conclusion**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UifKNE-myuPK"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "1.   Customers of age between 30 to 60 are more likely to buy insurance.\n",
+        "\n",
+        "2.   Customers with Driving License have higher chance of buying Insurance.\n",
+        "3.   Customers with Vehicle_Damage are likely to buy insurance.\n",
+        "\n",
+        "\n",
+        "4.   The variable such as Age, Previously_insured,Annual_premium are more afecting the target variable.\n",
+        "\n",
+        "5.   comparing ROC curve we can see that Random Forest model preform better. Because curves closer to the top-left corner, it indicate a better performance.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ]
